@@ -1,9 +1,17 @@
-The following changes have been made between John 1.7.9 and 1.7.9.2:
+The following changes have been made between John 1.7.9 and 1.7.9.3:
 
 * Enhanced the support for DES-based tripcodes by making use of the bitslice
 DES implementation and supporting OpenMP parallelization.
-* Tuned the hash table size thresholds based on testing on saltless hashes on a
-Core 2'ish CPU.
+* Implemented bitmaps for fast initial comparison of computed hashes against
+those loaded for cracking.  This is applied before hash table lookups, and it
+allows for the use of smaller hash tables (thereby saving memory) while
+achieving the same or greater speed that larger hash tables previously did.
+The speed increase is due to improved locality of reference (where only the
+smaller bitmap is accessed all the time, whereas the larger hash table behind
+it is only accessed for a percentage of comparisons and additionally it is
+smaller than it would otherwise need to be).
+* Tuned the bitmap and hash table sizes and thresholds based on testing on
+saltless hashes on a Core 2'ish CPU.
 * With 32-bit x86 builds and at least MMX enabled, the "two hashes at a time"
 code for bcrypt is now enabled for GCC 4.2 and newer.  This change is made
 based on benchmark results for different builds made with different versions of
@@ -290,4 +298,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.77 2012/01/14 19:46:02 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.78 2012/01/15 22:12:09 solar Exp $
